--- a/main.css
+++ b/main.css
@@ -8,6 +8,7 @@
 
 html, body{
     height: 100%;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -39,6 +40,18 @@ nav{
 .nav-buttons{
     width: 750px;
     justify-content: space-evenly;
+    padding-left: 10px;
+}
+
+.about-button :hover{
+    text-decoration: none;
+}
+
+.navigation-button{
+    /* display: block;
+    position: relative;
+    top: -65px; */
+    /* visibility: hidden; */
 }
 
 .flex-settings{
@@ -55,8 +68,8 @@ margin-bottom: -30px;
     justify-content: center;
     padding-top: 5%;
     width: 100%;
-    min-height: 90%;
-    margin-top: -60px;
+    height: 100vh;
+    /* margin-top: -60px; */
     background: url(Assets/marek-piwnicki-mt9TrXpGQjo-unsplash.jpg)  no-repeat fixed top center;
     background-position: center;
     background-size: cover;
@@ -68,11 +81,23 @@ margin-bottom: -30px;
     width: 750px;
     color: lightgray;
     padding: 20vh 15vw 5vh 15vw;
+    position: relative;
 }
 
 .my-name h1{
     display: flex;
     justify-content: center;
+}
+
+.social-media {
+    margin: 5px;
+    display:flex;
+    justify-content: space-evenly;
+}
+
+.social-media img{
+    height: 32px;
+    width: 32px;
 }
 
 .section-header{
@@ -86,13 +111,29 @@ background-color: white;
 padding: 30px;
 }
 
+.about-me::before{
+    margin: 60px;
+    content: "";
+    display: block;
+}
+
 .about-me{
     background-color: #0B5563;
     color: lightgrey;
     height: 100%;
     padding: 30px;
+    /* display: flex;
+    justify-content:space-between; */
+}
+
+
+.about-content-wrap{
     display: flex;
-    justify-content:space-between;
+    justify-content:space-evenly;   
+}
+
+.biography{
+    padding: 60px;
 }
 
 /* #about-me-link{
@@ -113,16 +154,33 @@ padding: 0px 90px;
 }
 
 .right{
-    margin-left:15px
+    margin-left:15px;
+    width: 100%;
 }
 
 .profile-photo{
-    background: url(Assets/LindseyRobertson2\ -\ Copy.jpg);
+    /* background: url(Assets/LindseyRobertson2\ -\ Copy.jpg); */
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    height: 100%;
-    width: 400px;
+    /* height: 500;
+    width: 400px; */
+}
+
+.test-row{
+    display: flex;
+}
+
+
+
+.profile-photo-test img{
+     min-width: 50%;
+    /* min-width: 250px;  */
+}
+
+.profile-photo img{
+    width: 100%;
+    min-width: 250px;
 }
 
 .projects-wrapper{
@@ -131,12 +189,41 @@ padding: 0px 90px;
     }
     
 .projects{
-        background-color: #A2BCE0;
+        background-color: #5E5c6c;
         color: lightgrey;
-        height: 80%;
-        padding: 30px;
+        height: 100%;
+        padding: 60px 30px 30px 30px;
         display: flex;
         justify-content:space-between;
+        flex-direction: column;
+}
+
+.carousel-inner{
+    justify-content: space-evenly;
+}
+
+.img-thumbnail{
+    height: 550px;
+    width: 550px;
+}
+
+.my-project-box{
+    height: 550px;
+    width: 550px;
+}
+
+.first-project-photo{
+    background-image: url(Assets/CSSCreature.png);
+    height: 300px;
+    width: 450px;
+    background-color: white;
+    background-position: top;
+  /* background-size: cover; */
+  background-repeat: no-repeat;
+}
+
+.bottom{
+    padding: 10px;
 }
 
 .contact-me{
@@ -145,9 +232,10 @@ padding: 0px 90px;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    height: 40%;
+    height: 100vh;
     color: lightgray;
     padding: 30px;
+    margin-bottom: -30px;
 }
 form{
     width: 40%;
